# api/openapi/openapi.yaml
@@ -117,14 +117,12 @@ components:
           minLength: 1
           maxLength: 50
           example: Test
-          nullable: true
         last_name:
           type: string
           description: Last name of the user.
           example: User
           minLength: 1
           maxLength: 50
-          nullable: true
         email:
           type: string
           format: email
@@ -1123,18 +1121,12 @@ components:
                 minLength: 1
                 maxLength: 50
                 example: Test
-                nullable: true
-                x-go-type: "Optional[string]"
-                x-go-type-skip-optional-pointer: true
               last_name:
                 type: string
                 description: Last name of the user.
                 example: User
                 minLength: 1
                 maxLength: 50
-                nullable: true
-                x-go-type: "Optional[string]"
-                x-go-type-skip-optional-pointer: true
               email:
                 type: string
                 format: email
@@ -1254,14 +1246,12 @@ components:
                 minLength: 1
                 maxLength: 50
                 example: Test
-                nullable: true
               last_name:
                 type: string
                 description: Last name of the user.
                 example: User
                 minLength: 1
                 maxLength: 50
-                nullable: true
               email:
                 type: string
                 format: email
@@ -1331,6 +1321,8 @@ components:
               - username
               - email
               - password
+              - first_name
+              - last_name
     TodoCreate:
       content:
         application/json:
